--- a/admin.html
+++ b/admin.html
@@ -645,7 +645,7 @@
             </div>
 
         <div class="dashboard-section admin-map-container">
-            <h3>Defect Locations (Map View)</h3>
+            <h3>Defect Locations along KKM-Webuye-KTL (A1)Rd map</h3>
             <div class="map-filter-controls">
                 <label for="filterMapDefectType">Defect Type:</label>
                 <select id="filterMapDefectType">
