--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Powered Road Inspection and Management System: A Pilot on C33 Kakamega–Mumias Corridor, Kenya</title>
+    <title>AI-Powered Road Inspection and Management System: A Pilot KKM-Webuye-KTL (A1)Rd , Kenya</title>
     <link rel="icon" href="logo.png" type="image/png">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
